# menos

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  config.h  menos.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.c  token.h
src/memory/: CMakeLists.txt  allocate.c  allocate.h
src/parser/: CMakeLists.txt  ast.c  ast.h  parser.c  parser.h  rule.c  rule.h
src/util/: CMakeLists.txt  fixed_buf.c  fixed_buf.h  flex_buf.c  flex_buf.h
test/: CMakeLists.txt  fixed_buf.c  flex_buf.c  lexer.c  test.c  test_lexer.c
